--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body {
     margin: 0;
     padding: 0;
+    padding-bottom: 100px;
 }
 li img {
     width: 50px;
@@ -46,13 +47,13 @@ li a:hover {
 }
 
                             /* Tartalmak */
- h1 {
-     font-size: 5em;
-     padding-top: 80px;
+h1 {
+    font-size: 5em;
+    padding-top: 80px;
     } 
- h2 {
-     font-size: 3em;
-     color:#ff0099;
+h2 {
+    font-size: 3em;
+    color:#ff0099;
     }
 .aboutMe {
     font-size: 2em
@@ -66,6 +67,7 @@ li a:hover {
     font-size: 4em;
     text-align: center;
     font-weight: bolder;
+    color: #000000;
 }
 .header {
     font-size: 2.5em;
