--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ li a {
     margin: 15px 15px;
 }
 .positioning {
-    padding-right: 10%
+    margin-right: 10%
 }
 li a:hover {
     color:#ff000070
