--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-                            /* NavBar */
 body {
     margin: 0;
     padding: 0;
     padding-bottom: 100px;
 }
+                            /* NavBar */
 li img {
     width: 50px;
     float: left;
@@ -29,7 +29,7 @@ li a {
     margin: 15px 15px;
 }
 .positioning {
-    margin-right: 10%
+    margin-right: 10%;
 }
 li a:hover {
     color:#ff000070
